bug 12439
Fix search bar wrapping, caused by toolbar length being too long to
fit maximize icon

status 12439: resolved fixed

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -2260,7 +2260,7 @@ div.list-view div.toolbar div.section-switcher div.section-select {
 }
 
 div.list-view div.toolbar div.section-switcher div.section-select select {
-  width: 146px;
+  width: 93px;
   margin-right: 13px;
 }
 
@@ -2280,7 +2280,7 @@ div.list-view div.toolbar div.section-switcher div.section-select label {
 /*Breadcrumbs*/
 div.toolbar div.filters {
   margin: 5px 0px 0 12px;
-  width: 211px;
+  width: 165px;
   float: left;
 }
 
